--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Chess - 人机对战</title>
+    <meta name="version" content="v1.0.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chessboard-js/1.0.0/chessboard-1.0.0.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,6 +12,7 @@
     <div class="container">
         <header>
             <h1>♔ AI Chess ♚</h1>
+            <div class="version">v1.1.0</div>
             <div class="header-controls">
                 <div class="control-group">
                     <label>难度:</label>
