--- a/index.html
+++ b/index.html
@@ -10,27 +10,33 @@
 </head>
 <body>
     <div class="container">
-        <header>
+<header>
             <h1>♔ AI Chess ♚</h1>
-            <div class="version">v1.1.0</div>
             <div class="header-controls">
                 <div class="control-group">
                     <label>难度:</label>
                     <select id="difficulty">
-                        <option value="1">等级 1 (入门 1000 ELO)</option>
-                        <option value="2">等级 2 (初级 1250 ELO)</option>
-                        <option value="3" selected>等级 3 (中级 1500 ELO)</option>
-                        <option value="4">等级 4 (高级 1750 ELO)</option>
-                        <option value="5">等级 5 (大师 2000 ELO)</option>
+                        <option value="1" data-zh="等级 1 (入门 1000 ELO)" data-en="Level 1 (Beginner 1000)">等级 1 (入门 1000 ELO)</option>
+                        <option value="2" data-zh="等级 2 (初级 1250 ELO)" data-en="Level 2 (Intermediate 1250)">等级 2 (初级 1250 ELO)</option>
+                        <option value="3" selected data-zh="等级 3 (中级 1500 ELO)" data-en="Level 3 (Advanced 1500)">等级 3 (中级 1500 ELO)</option>
+                        <option value="4" data-zh="等级 4 (高级 1750 ELO)" data-en="Level 4 (Expert 1750)">等级 4 (高级 1750 ELO)</option>
+                        <option value="5" data-zh="等级 5 (大师 2000 ELO)" data-en="Level 5 (Master 2000)">等级 5 (大师 2000 ELO)</option>
                     </select>
                 </div>
                 <div class="control-group">
                     <label>执子:</label>
                     <select id="playerColor">
-                        <option value="white" selected>白方</option>
-                        <option value="black">黑方</option>
+                        <option value="white" selected data-zh="白方" data-en="White">白方</option>
+                        <option value="black" data-zh="黑方" data-en="Black">黑方</option>
                     </select>
                 </div>
+            </div>
+            <div class="header-corner">
+                <select id="language">
+                    <option value="zh">中文</option>
+                    <option value="en">EN</option>
+                </select>
+                <div class="version">v1.2.6</div>
             </div>
         </header>
 
