--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <option value="zh">中文</option>
                     <option value="en">EN</option>
                 </select>
-                <div class="version">v1.3.7</div>
+                <div class="version">v1.3.8</div>
             </div>
         </header>
 
@@ -93,6 +93,8 @@
             <div id="promotionOptions"></div>
         </div>
     </div>
+
+    <div id="toast" class="toast hidden"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
