--- a/gomoku.html
+++ b/gomoku.html
@@ -22,32 +22,32 @@
             <div class="game-info">
                 <div class="player-info">
                     <span id="currentPlayer">●</span>
-                    <span id="playerLabel">当前: 黑方</span>
+                    <span id="playerLabel"></span>
                 </div>
             </div>
 
             <div class="gomoku-board" id="board"></div>
 
             <div class="controls">
-                <button id="newGame" class="btn primary">新游戏</button>
-                <button id="undo" class="btn">撤销</button>
-                <button id="resign" class="btn">认输</button>
+                <button id="newGame" class="btn primary"></button>
+                <button id="undo" class="btn"></button>
+                <button id="resign" class="btn"></button>
             </div>
 
             <div class="settings">
                 <label>
-                    <span id="modeLabel">模式:</span>
+                    <span id="modeLabel"></span>
                     <select id="gameMode">
-                        <option value="pvp" selected>双人对战</option>
-                        <option value="pvc">人机对战</option>
+                        <option value="pvp" selected></option>
+                        <option value="pvc"></option>
                     </select>
                 </label>
                 <label>
-                    <span id="difficultyLabel">难度:</span>
+                    <span id="difficultyLabel"></span>
                     <select id="difficulty">
-                        <option value="1">简单</option>
-                        <option value="2" selected>中等</option>
-                        <option value="3">困难</option>
+                        <option value="1"></option>
+                        <option value="2" selected></option>
+                        <option value="3"></option>
                     </select>
                 </label>
             </div>
