--- a/sudoku.html
+++ b/sudoku.html
@@ -35,20 +35,20 @@
             </div>
 
             <div class="controls">
-                <button id="newGame" class="btn primary">新游戏</button>
-                <button id="solve" class="btn">解题</button>
-                <button id="erase" class="btn">擦除</button>
-                <button id="undo" class="btn">撤销</button>
+                <button id="newGame" class="btn primary"></button>
+                <button id="solve" class="btn"></button>
+                <button id="erase" class="btn"></button>
+                <button id="undo" class="btn"></button>
             </div>
 
             <div class="settings">
                 <label>
-                    <span id="difficultyLabel">难度:</span>
+                    <span id="difficultyLabel"></span>
                     <select id="difficulty">
-                        <option value="easy">简单</option>
-                        <option value="medium" selected>中等</option>
-                        <option value="hard">困难</option>
-                        <option value="expert">专家</option>
+                        <option value="easy"></option>
+                        <option value="medium" selected></option>
+                        <option value="hard"></option>
+                        <option value="expert"></option>
                     </select>
                 </label>
             </div>
