Fix i18n: landing page title and subtitle

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Games - 人机对战平台</title>
-    <meta name="version" content="v1.5.1">
+    <title id="pageTitle">AI Games</title>
+    <meta name="version" content="v1.5.2">
     <link rel="stylesheet" href="css/style.css">
     <style>
         .landing {
@@ -114,7 +114,7 @@
         </div>
 
         <h1>🎮 AI Games</h1>
-        <p class="subtitle">人机对战平台</p>
+        <p class="subtitle" id="subtitle"></p>
 
         <div class="game-selector">
             <h2 id="selectGameText">选择游戏</h2>
