--- a/sudoku.html
+++ b/sudoku.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/sudoku.css">
 </head>
 <body>
-    <div class="sudoku-container">
+    <div class="container">
         <header class="toolbar">
             <div class="toolbar-left">
                 <button id="backToHome" class="icon-btn">🏠</button>
@@ -24,6 +24,7 @@
                         <option value="expert"></option>
                     </select>
                 </label>
+                <button id="newGame" class="btn primary small"></button>
                 <select id="language">
                     <option value="zh">中文</option>
                     <option value="en">EN</option>
@@ -31,7 +32,7 @@
             </div>
         </header>
 
-        <main>
+        <main class="game-main">
             <div class="sudoku-board" id="board"></div>
             
             <div class="numpad" id="numpad">
@@ -48,7 +49,6 @@
             </div>
 
             <div class="controls">
-                <button id="newGame" class="btn primary"></button>
                 <button id="solve" class="btn"></button>
                 <button id="erase" class="btn"></button>
                 <button id="undo" class="btn"></button>
