--- a/game.html
+++ b/game.html
@@ -16,7 +16,61 @@
                 <h1 id="gameTitle">♔ Chess ♚</h1>
             </div>
             <div class="toolbar-center">
-                <div class="control-group" id="difficultyGroup">
+                <div class="game-info-bar">
+                    <span id="gameInfo">-</span>
+                </div>
+            </div>
+            <div class="toolbar-right">
+                <button id="newGame" class="btn primary"></button>
+            </div>
+        </header>
+
+        <main>
+            <aside class="left-panel">
+                <div class="control-panel">
+                    <h3 id="controlTitle"></h3>
+                    <div class="game-info">
+                        <div class="info-row">
+                            <span id="turnLabel"></span>
+                            <span id="turnIndicator"></span>
+                        </div>
+                        <div class="info-row">
+                            <span id="movesLabel"></span>
+                            <span id="moveCount">0</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="history-panel">
+                    <h3 id="historyTitle"></h3>
+                    <div id="moveHistory"></div>
+                    <div class="status">
+                        <span id="status"></span>
+                    </div>
+                </div>
+            </aside>
+
+            <section class="board-section">
+                <div id="board"></div>
+                <div id="thinking" class="thinking hidden"></div>
+            </section>
+
+            <aside class="right-panel">
+                <button id="undoMove" class="btn"></button>
+                <button id="resign" class="btn"></button>
+                <button id="flipBoard" class="btn"></button>
+                <label class="sound-toggle">
+                    <input type="checkbox" id="soundToggle">
+                    <span>🔊</span>
+                </label>
+            </aside>
+        </main>
+    </div>
+
+    <div id="newGameModal" class="modal">
+        <div class="modal-content">
+            <h2 id="newGameTitle"></h2>
+            <div class="modal-options">
+                <div class="option-group">
                     <label id="difficultyLabel"></label>
                     <select id="difficulty">
                         <option value="1" data-zh="等级 1" data-en="Lvl 1">等级 1</option>
@@ -26,7 +80,7 @@
                         <option value="5" data-zh="等级 5" data-en="Lvl 5">等级 5</option>
                     </select>
                 </div>
-                <div class="control-group" id="playerColorGroup">
+                <div class="option-group">
                     <label id="playerColorLabel"></label>
                     <select id="playerColor">
                         <option value="white" selected data-zh="白方" data-en="White">白方</option>
@@ -34,52 +88,8 @@
                     </select>
                 </div>
             </div>
-            <div class="toolbar-right">
-                <label>
-                    <input type="checkbox" id="soundToggle">
-                    <span>🔊</span>
-                </label>
-                <select id="language">
-                    <option value="zh">中文</option>
-                    <option value="en">EN</option>
-                </select>
-            </div>
-        </header>
-
-        <main>
-            <aside class="history-panel">
-                <h3 id="historyTitle"></h3>
-                <div id="moveHistory"></div>
-                <div class="status">
-                    <span id="status"></span>
-                </div>
-            </aside>
-
-            <section class="board-section">
-                <div id="board"></div>
-                <div id="thinking" class="thinking hidden"></div>
-                <div class="game-controls">
-                    <button id="newGame" class="btn primary"></button>
-                    <button id="undoMove" class="btn"></button>
-                    <button id="resign" class="btn"></button>
-                    <button id="flipBoard" class="btn"></button>
-                </div>
-            </section>
-
-            <aside class="control-panel">
-                <h3 id="controlTitle"></h3>
-                <div class="game-info">
-                    <div class="info-row">
-                        <span id="turnLabel"></span>
-                        <span id="turnIndicator"></span>
-                    </div>
-                    <div class="info-row">
-                        <span id="movesLabel"></span>
-                        <span id="moveCount">0</span>
-                    </div>
-                </div>
-            </aside>
-        </main>
+            <button id="startGame" class="btn primary"></button>
+        </div>
     </div>
 
     <div id="gameOverModal" class="modal hidden">
