--- a/gomoku.html
+++ b/gomoku.html
@@ -55,6 +55,13 @@
                         <option value="3" data-zh="困难" data-en="Hard">困难</option>
                     </select>
                 </div>
+                <div class="option-group" id="playerColorGroup">
+                    <label id="playerColorLabel"></label>
+                    <select id="playerColor">
+                        <option value="black" selected data-zh="黑方(先手)" data-en="Black (First)">黑方(先手)</option>
+                        <option value="white" data-zh="白方(后手)" data-en="White (Second)">白方(后手)</option>
+                    </select>
+                </div>
             </div>
             <button id="startGame" class="btn primary"></button>
         </div>
