Fix: modal auto-show, game auto-start bugs, move count display, null element errors

--- a/game.html
+++ b/game.html
@@ -60,7 +60,7 @@
         </main>
     </div>
 
-    <div id="newGameModal" class="modal">
+    <div id="newGameModal" class="modal hidden">
         <div class="modal-content">
             <h2 id="newGameTitle"></h2>
             <div class="modal-options">
