--- a/sudoku.html
+++ b/sudoku.html
@@ -50,7 +50,7 @@
         <div id="message" class="message hidden"></div>
     </div>
 
-    <div id="newGameModal" class="modal">
+    <div id="newGameModal" class="modal hidden">
         <div class="modal-content">
             <h2 id="newGameTitle"></h2>
             <div class="modal-options">
